# CG2024

./: CMakeLists.txt  README.md
Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/: output.ppm
Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/sdw/: CanvasPoint.h
Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/src/: RedNoise.cpp  texture.ppm
