cmake_minimum_required(VERSION 3.29)
project(CG2024)

set(CMAKE_CXX_STANDARD 14)

include_directories("Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm")
include_directories("Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/detail")
include_directories("Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/gtc")
include_directories("Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/gtx")
include_directories("Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/test/external/gli")
include_directories("Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/test/external/gli/core")
include_directories("Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/test/external/gli/gtx")
include_directories("Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/sdw")

add_executable(CG2024
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/detail/_features.hpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/detail/_fixes.hpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/detail/_noise.hpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/detail/_swizzle.hpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/detail/_swizzle_func.hpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/detail/_vectorize.hpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/detail/dummy.cpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/detail/func_common.hpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/detail/func_common.inl"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/detail/func_exponential.hpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/detail/func_exponential.inl"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/detail/func_geometric.hpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/detail/func_geometric.inl"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/detail/func_integer.hpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/detail/func_integer.inl"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/detail/func_matrix.hpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/detail/func_matrix.inl"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/detail/func_packing.hpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/detail/func_packing.inl"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/detail/func_trigonometric.hpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/detail/func_trigonometric.inl"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/detail/func_vector_relational.hpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/detail/func_vector_relational.inl"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/detail/glm.cpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/detail/intrinsic_common.hpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/detail/intrinsic_common.inl"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/detail/intrinsic_exponential.hpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/detail/intrinsic_exponential.inl"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/detail/intrinsic_geometric.hpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/detail/intrinsic_geometric.inl"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/detail/intrinsic_integer.hpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/detail/intrinsic_integer.inl"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/detail/intrinsic_matrix.hpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/detail/intrinsic_matrix.inl"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/detail/intrinsic_trigonometric.hpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/detail/intrinsic_trigonometric.inl"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/detail/intrinsic_vector_relational.hpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/detail/intrinsic_vector_relational.inl"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/detail/precision.hpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/detail/setup.hpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/detail/type_float.hpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/detail/type_gentype.hpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/detail/type_gentype.inl"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/detail/type_half.hpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/detail/type_half.inl"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/detail/type_int.hpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/detail/type_mat.hpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/detail/type_mat.inl"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/detail/type_mat2x2.hpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/detail/type_mat2x2.inl"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/detail/type_mat2x3.hpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/detail/type_mat2x3.inl"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/detail/type_mat2x4.hpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/detail/type_mat2x4.inl"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/detail/type_mat3x2.hpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/detail/type_mat3x2.inl"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/detail/type_mat3x3.hpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/detail/type_mat3x3.inl"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/detail/type_mat3x4.hpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/detail/type_mat3x4.inl"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/detail/type_mat4x2.hpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/detail/type_mat4x2.inl"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/detail/type_mat4x3.hpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/detail/type_mat4x3.inl"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/detail/type_mat4x4.hpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/detail/type_mat4x4.inl"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/detail/type_vec.hpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/detail/type_vec.inl"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/detail/type_vec1.hpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/detail/type_vec1.inl"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/detail/type_vec2.hpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/detail/type_vec2.inl"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/detail/type_vec3.hpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/detail/type_vec3.inl"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/detail/type_vec4.hpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/detail/type_vec4.inl"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/detail/type_vec4_avx.inl"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/detail/type_vec4_avx2.inl"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/detail/type_vec4_sse2.inl"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/gtc/bitfield.hpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/gtc/bitfield.inl"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/gtc/color_space.hpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/gtc/color_space.inl"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/gtc/constants.hpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/gtc/constants.inl"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/gtc/epsilon.hpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/gtc/epsilon.inl"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/gtc/integer.hpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/gtc/integer.inl"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/gtc/matrix_access.hpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/gtc/matrix_access.inl"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/gtc/matrix_integer.hpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/gtc/matrix_inverse.hpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/gtc/matrix_inverse.inl"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/gtc/matrix_transform.hpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/gtc/matrix_transform.inl"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/gtc/noise.hpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/gtc/noise.inl"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/gtc/packing.hpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/gtc/packing.inl"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/gtc/quaternion.hpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/gtc/quaternion.inl"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/gtc/random.hpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/gtc/random.inl"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/gtc/reciprocal.hpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/gtc/reciprocal.inl"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/gtc/round.hpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/gtc/round.inl"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/gtc/type_precision.hpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/gtc/type_precision.inl"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/gtc/type_ptr.hpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/gtc/type_ptr.inl"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/gtc/ulp.hpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/gtc/ulp.inl"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/gtc/vec1.hpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/gtc/vec1.inl"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/gtx/associated_min_max.hpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/gtx/associated_min_max.inl"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/gtx/bit.hpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/gtx/bit.inl"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/gtx/closest_point.hpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/gtx/closest_point.inl"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/gtx/color_space.hpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/gtx/color_space.inl"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/gtx/color_space_YCoCg.hpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/gtx/color_space_YCoCg.inl"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/gtx/common.hpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/gtx/common.inl"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/gtx/compatibility.hpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/gtx/compatibility.inl"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/gtx/component_wise.hpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/gtx/component_wise.inl"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/gtx/dual_quaternion.hpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/gtx/dual_quaternion.inl"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/gtx/euler_angles.hpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/gtx/euler_angles.inl"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/gtx/extend.hpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/gtx/extend.inl"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/gtx/extented_min_max.hpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/gtx/extented_min_max.inl"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/gtx/fast_exponential.hpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/gtx/fast_exponential.inl"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/gtx/fast_square_root.hpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/gtx/fast_square_root.inl"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/gtx/fast_trigonometry.hpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/gtx/fast_trigonometry.inl"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/gtx/gradient_paint.hpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/gtx/gradient_paint.inl"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/gtx/handed_coordinate_space.hpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/gtx/handed_coordinate_space.inl"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/gtx/hash.hpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/gtx/hash.inl"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/gtx/integer.hpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/gtx/integer.inl"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/gtx/intersect.hpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/gtx/intersect.inl"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/gtx/io.hpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/gtx/io.inl"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/gtx/log_base.hpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/gtx/log_base.inl"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/gtx/matrix_cross_product.hpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/gtx/matrix_cross_product.inl"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/gtx/matrix_decompose.hpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/gtx/matrix_decompose.inl"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/gtx/matrix_interpolation.hpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/gtx/matrix_interpolation.inl"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/gtx/matrix_major_storage.hpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/gtx/matrix_major_storage.inl"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/gtx/matrix_operation.hpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/gtx/matrix_operation.inl"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/gtx/matrix_query.hpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/gtx/matrix_query.inl"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/gtx/matrix_transform_2d.hpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/gtx/matrix_transform_2d.inl"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/gtx/mixed_product.hpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/gtx/mixed_product.inl"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/gtx/norm.hpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/gtx/norm.inl"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/gtx/normal.hpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/gtx/normal.inl"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/gtx/normalize_dot.hpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/gtx/normalize_dot.inl"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/gtx/number_precision.hpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/gtx/number_precision.inl"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/gtx/optimum_pow.hpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/gtx/optimum_pow.inl"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/gtx/orthonormalize.hpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/gtx/orthonormalize.inl"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/gtx/perpendicular.hpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/gtx/perpendicular.inl"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/gtx/polar_coordinates.hpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/gtx/polar_coordinates.inl"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/gtx/projection.hpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/gtx/projection.inl"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/gtx/quaternion.hpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/gtx/quaternion.inl"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/gtx/range.hpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/gtx/raw_data.hpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/gtx/raw_data.inl"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/gtx/rotate_normalized_axis.hpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/gtx/rotate_normalized_axis.inl"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/gtx/rotate_vector.hpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/gtx/rotate_vector.inl"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/gtx/scalar_multiplication.hpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/gtx/scalar_relational.hpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/gtx/scalar_relational.inl"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/gtx/simd_mat4.hpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/gtx/simd_mat4.inl"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/gtx/simd_quat.hpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/gtx/simd_quat.inl"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/gtx/simd_vec4.hpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/gtx/simd_vec4.inl"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/gtx/spline.hpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/gtx/spline.inl"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/gtx/std_based_type.hpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/gtx/std_based_type.inl"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/gtx/string_cast.hpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/gtx/string_cast.inl"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/gtx/transform.hpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/gtx/transform.inl"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/gtx/transform2.hpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/gtx/transform2.inl"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/gtx/type_aligned.hpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/gtx/type_aligned.inl"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/gtx/vector_angle.hpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/gtx/vector_angle.inl"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/gtx/vector_query.hpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/gtx/vector_query.inl"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/gtx/wrap.hpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/gtx/wrap.inl"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/common.hpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/exponential.hpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/ext.hpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/fwd.hpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/geometric.hpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/glm.hpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/integer.hpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/mat2x2.hpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/mat2x3.hpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/mat2x4.hpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/mat3x2.hpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/mat3x3.hpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/mat3x4.hpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/mat4x2.hpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/mat4x3.hpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/mat4x4.hpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/matrix.hpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/packing.hpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/trigonometric.hpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/vec2.hpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/vec3.hpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/vec4.hpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/glm/vector_relational.hpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/test/core/core_func_common.cpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/test/core/core_func_exponential.cpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/test/core/core_func_geometric.cpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/test/core/core_func_integer.cpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/test/core/core_func_integer_bit_count.cpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/test/core/core_func_integer_find_lsb.cpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/test/core/core_func_integer_find_msb.cpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/test/core/core_func_matrix.cpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/test/core/core_func_noise.cpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/test/core/core_func_packing.cpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/test/core/core_func_swizzle.cpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/test/core/core_func_trigonometric.cpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/test/core/core_func_vector_relational.cpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/test/core/core_setup_force_cxx98.cpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/test/core/core_setup_message.cpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/test/core/core_setup_precision.cpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/test/core/core_type_cast.cpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/test/core/core_type_ctor.cpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/test/core/core_type_float.cpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/test/core/core_type_int.cpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/test/core/core_type_length.cpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/test/core/core_type_length_size.cpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/test/core/core_type_mat2x2.cpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/test/core/core_type_mat2x3.cpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/test/core/core_type_mat2x4.cpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/test/core/core_type_mat3x2.cpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/test/core/core_type_mat3x3.cpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/test/core/core_type_mat3x4.cpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/test/core/core_type_mat4x2.cpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/test/core/core_type_mat4x3.cpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/test/core/core_type_mat4x4.cpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/test/core/core_type_vec1.cpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/test/core/core_type_vec2.cpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/test/core/core_type_vec3.cpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/test/core/core_type_vec4.cpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/test/external/gli/core/dummy.cpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/test/external/gli/core/generate_mipmaps.hpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/test/external/gli/core/generate_mipmaps.inl"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/test/external/gli/core/image2d.hpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/test/external/gli/core/image2d.inl"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/test/external/gli/core/operation.hpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/test/external/gli/core/operation.inl"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/test/external/gli/core/operator.hpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/test/external/gli/core/operator.inl"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/test/external/gli/core/shared_array.hpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/test/external/gli/core/shared_array.inl"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/test/external/gli/core/shared_ptr.hpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/test/external/gli/core/shared_ptr.inl"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/test/external/gli/core/size.hpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/test/external/gli/core/size.inl"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/test/external/gli/core/texture2d.hpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/test/external/gli/core/texture2d.inl"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/test/external/gli/core/texture2d_array.hpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/test/external/gli/core/texture2d_array.inl"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/test/external/gli/core/texture_cube.hpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/test/external/gli/core/texture_cube.inl"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/test/external/gli/core/texture_cube_array.hpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/test/external/gli/core/texture_cube_array.inl"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/test/external/gli/gtx/compression.hpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/test/external/gli/gtx/compression.inl"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/test/external/gli/gtx/fetch.hpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/test/external/gli/gtx/fetch.inl"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/test/external/gli/gtx/gl_texture2d.hpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/test/external/gli/gtx/gl_texture2d.inl"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/test/external/gli/gtx/gradient.hpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/test/external/gli/gtx/gradient.inl"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/test/external/gli/gtx/loader.hpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/test/external/gli/gtx/loader.inl"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/test/external/gli/gtx/loader_dds10.hpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/test/external/gli/gtx/loader_dds10.inl"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/test/external/gli/gtx/loader_dds9.hpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/test/external/gli/gtx/loader_dds9.inl"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/test/external/gli/gtx/loader_tga.hpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/test/external/gli/gtx/loader_tga.inl"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/test/external/gli/gtx/wavelet.hpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/test/external/gli/gtx/wavelet.inl"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/test/external/gli/gli.hpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/test/gtc/gtc_bitfield.cpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/test/gtc/gtc_color_space.cpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/test/gtc/gtc_constants.cpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/test/gtc/gtc_epsilon.cpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/test/gtc/gtc_integer.cpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/test/gtc/gtc_matrix_access.cpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/test/gtc/gtc_matrix_integer.cpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/test/gtc/gtc_matrix_inverse.cpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/test/gtc/gtc_matrix_transform.cpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/test/gtc/gtc_noise.cpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/test/gtc/gtc_packing.cpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/test/gtc/gtc_quaternion.cpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/test/gtc/gtc_random.cpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/test/gtc/gtc_reciprocal.cpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/test/gtc/gtc_round.cpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/test/gtc/gtc_type_precision.cpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/test/gtc/gtc_type_ptr.cpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/test/gtc/gtc_ulp.cpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/test/gtc/gtc_user_defined_types.cpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/test/gtc/gtc_vec1.cpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/test/gtx/gtx_associated_min_max.cpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/test/gtx/gtx_closest_point.cpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/test/gtx/gtx_color_space.cpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/test/gtx/gtx_color_space_YCoCg.cpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/test/gtx/gtx_common.cpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/test/gtx/gtx_compatibility.cpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/test/gtx/gtx_component_wise.cpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/test/gtx/gtx_dual_quaternion.cpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/test/gtx/gtx_euler_angle.cpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/test/gtx/gtx_extend.cpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/test/gtx/gtx_extented_min_max.cpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/test/gtx/gtx_fast_exponential.cpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/test/gtx/gtx_fast_square_root.cpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/test/gtx/gtx_fast_trigonometry.cpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/test/gtx/gtx_gradient_paint.cpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/test/gtx/gtx_handed_coordinate_space.cpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/test/gtx/gtx_int_10_10_10_2.cpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/test/gtx/gtx_integer.cpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/test/gtx/gtx_intersect.cpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/test/gtx/gtx_io.cpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/test/gtx/gtx_log_base.cpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/test/gtx/gtx_matrix_cross_product.cpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/test/gtx/gtx_matrix_decompose.cpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/test/gtx/gtx_matrix_interpolation.cpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/test/gtx/gtx_matrix_major_storage.cpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/test/gtx/gtx_matrix_operation.cpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/test/gtx/gtx_matrix_query.cpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/test/gtx/gtx_matrix_transform_2d.cpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/test/gtx/gtx_mixed_product.cpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/test/gtx/gtx_norm.cpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/test/gtx/gtx_normal.cpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/test/gtx/gtx_normalize_dot.cpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/test/gtx/gtx_number_precision.cpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/test/gtx/gtx_optimum_pow.cpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/test/gtx/gtx_orthonormalize.cpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/test/gtx/gtx_perpendicular.cpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/test/gtx/gtx_polar_coordinates.cpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/test/gtx/gtx_projection.cpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/test/gtx/gtx_quaternion.cpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/test/gtx/gtx_random.cpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/test/gtx/gtx_range.cpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/test/gtx/gtx_rotate_normalized_axis.cpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/test/gtx/gtx_rotate_vector.cpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/test/gtx/gtx_scalar_multiplication.cpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/test/gtx/gtx_scalar_relational.cpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/test/gtx/gtx_simd_mat4.cpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/test/gtx/gtx_simd_vec4.cpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/test/gtx/gtx_spline.cpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/test/gtx/gtx_string_cast.cpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/test/gtx/gtx_type_aligned.cpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/test/gtx/gtx_vector_angle.cpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/test/gtx/gtx_vector_query.cpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/glm-0.9.7.2/test/gtx/gtx_wrap.cpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/sdw/CanvasPoint.cpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/sdw/CanvasPoint.h"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/sdw/CanvasTriangle.cpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/sdw/CanvasTriangle.h"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/sdw/Colour.cpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/sdw/Colour.h"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/sdw/DrawingWindow.cpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/sdw/DrawingWindow.h"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/sdw/ModelTriangle.cpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/sdw/ModelTriangle.h"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/sdw/RayTriangleIntersection.cpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/sdw/RayTriangleIntersection.h"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/sdw/TextureMap.cpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/sdw/TextureMap.h"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/sdw/TexturePoint.cpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/sdw/TexturePoint.h"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/sdw/Utils.cpp"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/sdw/Utils.h"
    "Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/src/RedNoise.cpp")
